# AutoBus

./: QA.txt  README.md  Review and learn.txt  config.json  main.py  pyproject.toml  requirements.txt
Simple_Clicker/: Clicker.py  Screenshot_Function_Test.py
assets/images/battle/: offset_data.txt
assets/images/mirror_dungeon/event/: offset_data.txt
assets/images/mirror_dungeon/start_gift/: offset
assets/images/teams/: offset_data.txt
module/automation/: controller.py  screenshot.py
module/config/: config.py
module/logger/: logger.py
module/screen/: screen.py
module/ui/: gui.py
tasks/mirror_dungeon/: battle.py  dungeon_entry_manager.py  dungeon_run_manager.py  enter_mirror_dungeon.py  event.py  event_failsafe.py  gift_selector.py  identities_selector.py  result_claim.py  reward_selector.py  road_in_dungeon.py  shop.py  star_buff_selector.py  start_gift_selector.py  team_selector.py  theme_pack_selector.py
test/test_in_developing_phase/: test_capture_screen.py  test_game_class.py
tools/: asset_grabber.py  click_validator.py  coordinate_finder.py  cropper.py
utils/: game_validator.py  singletonmeta.py  vision.py  window_utils.py
