[project]
name = "AutoBus"
description = "Image recognition based automation script for Limbus Company"
readme = "README.md"
license = "AGPL-3.0-or-later"
authors = [{ name = "DTMplz1196" }]
requires-python = ">=3.12"
version = "1.0.0"

dependencies = [
    # Image Processing & Computer Vision
    "numpy",
    "opencv-python",
    "pillow",
    "onnxruntime==1.20.1",
    "rapidocr>=3.4.1",

    # Windows API & System
    "pywin32",         # Provides win32gui, win32ui, win32con, win32api
    "psutil",          # Process management

    # Automation & Control
    "PyAutoGUI",
    "pynput",          # Keyboard/Mouse listener (used in diagnostic/controllers)

    # GUI
    "streamlit",
]

[project.urls]
Homepage = "https://github.com/DTMplz1196/AutoBus"
